--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.11.8",
     "core-js": "^3.6.5",
     "papercss": "^1.8.2",
     "vue": "^2.6.11",
